--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "fake-json": "json-server src/assets/db.json --watch --port 3001"
+    "server": "node server.js",
+    "json-server": "json-server src/assets/db.json --watch --port 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "json-server": "^0.16.2"
   }
 }
