--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "json-server": "^0.16.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -43,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6",
-    "json-server": "^0.16.2"
+    "@types/react-router-dom": "^5.1.6"
   }
 }
